fix obsidian markup to match github

--- a/process/2026-01-06_research.md
+++ b/process/2026-01-06_research.md
@@ -1,12 +1,11 @@
 
 https://www.berndnaut.nl/
-
 bioluminéscence
+
 Télégraphe optique: communication.
-![[optical-telegraph.png|300]]
+![](attachments/optical-telegraph.png)
 
 Mammlus pour la forme jellyfishy
-![[mamatus.png|500]]
-
+![](attachments/mamatus.png)
 Omus pour les yeux.
-![[omus.png|800]]
+![](attachments/omus.png)
