--- a/process/2026-01-08_research.md
+++ b/process/2026-01-08_research.md
@@ -39,8 +39,7 @@ Lâche un fil, fil d'ariane
 Boule western désert.
 
 ## Autres idées
-
-![[fish-diodon.png|300]]
+![](attachments/fish-diodon.png)
 
 Poisson-hérisson (Diodon)
 **Un poisson qui se gonfle comme un ballon en cas de danger.**
