compress img & update journal

--- a/process/2026-01-06_research.md
+++ b/process/2026-01-06_research.md
@@ -3,9 +3,9 @@ https://www.berndnaut.nl/
 bioluminéscence
 
 Télégraphe optique: communication.
-![](attachments/optical-telegraph.png)
+![](attachments/optical-telegraph.jpg)
 
 Mammlus pour la forme jellyfishy
-![](attachments/mamatus.png)
+![](attachments/mamatus.jpg)
 Omus pour les yeux.
-![](attachments/omus.png)
+![](attachments/omus.jpg)
